cmake_minimum_required(VERSION 3.12)
project(tree)

set(CMAKE_CXX_STANDARD 14)

add_executable(tree main.cpp TreeStruct.h IsValidBST.h IsSymmetric.h LevelOrder.h MaxDepth.h IsBalance.h InvertTree.h LowestCommonAncester.h KthSmallest.h LowestCommonAncestor.h RightSideView.h CountNodes.h RecoverTree.h NumTrees.h)